Add event create and new controller methods

--- a/app/views/users/_created-events.html.erb
+++ b/app/views/users/_created-events.html.erb
@@ -1,7 +1,7 @@
 <h3>Created Events</h3>
 
-<% created-events = @user.events %>
-<% created-events.each do |event| %>
+<% created_events = @user.events %>
+<% created_events.each do |event| %>
   <div class="user-event-container">
     <ul>
       <li class="user-event-title"><%=event.title%></li>
