Add submit button, test functionality

--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -6,7 +6,9 @@
     <%= form.text_field :title %> <br>
 
     <%= form.label :description, "Date and Time"%> <br>
-    <%= form.date_field :event_date %>
+    <%= form.date_field :event_date %> <br>
 
+    <%= form.submit "Submit" %>
+  <% end %>
 </div>
 
