Add attendance list view to show all attendees of an event in the show.html.erb file

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,2 +1,6 @@
 <h3 id="show-title"> <%= @event.title %> </h3>
 <p><%= @event.date %></p>
+<p>Attendees:</p>
+<div>
+  <% render 'attendance_list' %>
+</div>
