Fix show.html.erb to show list of users and event date

--- a/app/views/events/_attendance_list.html.erb
+++ b/app/views/events/_attendance_list.html.erb
@@ -1,6 +1,6 @@
 <% @event.attendees.each do |attendee| %>
   <% invite = attendee.invititations.find_by(event_id: @event.id)%>
   <ul class="guest-list">
-    <li><%= attendee.name %></li>
+    <li><%= attendee.email %></li>
   </ul>
 <% end %>
