--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
 <h3 id="show-title"> <%= @event.title %> </h3>
-<p><%= @event.date %></p>
+<p><%= @event.event_date %></p>
 <p>Attendees:</p>
 <div>
   <% render 'attendance_list' %>
