--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -1,14 +1,8 @@
-<h1> New Invitaion </h1>
+<h1> Join Event </h1>
 
-<div data-turbo='false'>
-  <%= form_with model: @event do |form| %> 
-    <%= form.label :title, "Event Name:" %> <br>
-    <%= form.text_field :title %> <br>
+<%= params %>
+<!--render 'form', invitation: @invitation, event: Event.find(params[:event_id])
+--> <br>
 
-    <%= form.label :description, "Date and Time"%> <br>
-    <%= form.date_field :event_date %> <br>
-
-    <%= form.submit "Submit" %>
-  <% end %>
-</div>
+<%= link_to 'Back', root_path %>
 
