--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,5 +4,5 @@
 <p>Attendees:</p>
 <div>
   <% render 'attendance_list' %>
-  <%= link_to 'Add Attendee', new_invitation_path %>
+  <%= link_to 'Add Yourself to This Event', invitation_path, :method => :post %>
 </div>
