--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -1,8 +1,9 @@
 <h1> Join Event </h1>
 
 <%= params %>
-<!--render 'form', invitation: @invitation, event: Event.find(params[:event_id])
---> <br>
+
+
+<%render 'form', event: Event.find(params[:event_id])%> <br>
 
 <%= link_to 'Back', root_path %>
 
