--- a/app/views/events/_attendance_list.html.erb
+++ b/app/views/events/_attendance_list.html.erb
@@ -1,6 +1,7 @@
-<% @event.attendees.each do |attendee| %>
-  <% invite = attendee.invititations.find_by(event_id: @event.id)%>
-  <ul class="guest-list">
-    <li><%= attendee.email %></li>
-  </ul>
-<% end %>
+<ul class="guest-list">
+  <% @event.attendees.each do |attendee| %>
+    <% invite = attendee.invitations.find_by({event_id: @event.id})%>
+  
+      <li><%= attendee.email %></li>
+  <% end %>
+</ul>
