Update User Events page

--- a/app/views/users/_created-events.html.erb
+++ b/app/views/users/_created-events.html.erb
@@ -5,7 +5,7 @@
   <div class="user-event-container">
     <ul>
       <li class="user-event-title"><%=event.title%></li>
-      <li class="user-event-date"><%=event.event-date%></li>
+      <li class="user-event-date"><%=event.event_date%></li>
     </ul>
 
   </div>
