--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,4 +9,5 @@
 
  
 <% end %>
-<%= link_to 'New Event', new_event_path %>
+<%= link_to 'New Event', new_event_path %> <br>
+<%= link_to 'Your Profile', user_path(current_user)%>
