--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,6 @@
 <h3><%= @user.email %></h3>
 
 <div class="user-container">
-    <%= render 'created-events' %>
+    <%= render 'created_events' %>
     <%= render 'invitations' %>
 </div>
