Update user#show to show future and past events

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,5 @@
 
 <div class="user-container">
     <%= render 'created_events' %>
-    <%= render 'invitations' %>
+    <%= render 'future_invitations' %>
 </div>
