Fix events to show on users profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,6 @@
 
 <div class="user-container">
     <%= render 'created_events' %>
+    <%= render 'past_invitations' %>
     <%= render 'future_invitations' %>
 </div>
