--- a/app/views/users/_future_invitations.html.erb
+++ b/app/views/users/_future_invitations.html.erb
@@ -1,11 +1,9 @@
 <h1>Future Events</h1>
 <div>
   <ul>
-    <% invitations = @user.invitations %>
-    <% invitations.each do |invitation| %>
-      <% event = Event.find(invitation.event_id)%>
-      <li class="user-event-title"><%=event.title%></li>
-      <li class="user-event-date"><%=event.event_date%></li>
+    <% @user.attended_events.each do |event| %>
+      <li><%= link_to event.title, event_path(event) %></li>
+      <li>Date: <%= event.event_date %> </li>
     <% end %>
   </ul>
 </div>
