--- a/app/views/users/_past_invitations.html.erb
+++ b/app/views/users/_past_invitations.html.erb
@@ -1,1 +1,10 @@
 <h1>Past Events</h1>
+
+<div>
+  <ul>
+    <% @user.attended_events.past_event.each do |event| %>
+      <li><%= link_to event.title, event_path(event) %></li>
+      <li>Date: <%= event.event_date %> </li>
+    <% end %>
+  </ul>
+</div>
